--- a/tokens/application.json
+++ b/tokens/application.json
@@ -542,7 +542,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.config.color.modifier.other.onTranslucent}",
+                    "value": "{app.config.color.modifier.fg.onTranslucent}",
                     "space": "hsl"
                   }
                 }
@@ -1034,7 +1034,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.config.color.modifier.other.onTranslucent}",
+                    "value": "{app.config.color.modifier.fg.onTranslucent}",
                     "space": "hsl"
                   }
                 }
@@ -1304,7 +1304,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.config.color.modifier.other.onTranslucent}",
+                    "value": "{app.config.color.modifier.fg.onTranslucent}",
                     "space": "hsl"
                   }
                 }
@@ -1550,7 +1550,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.config.color.modifier.other.onTranslucent}",
+                    "value": "{app.config.color.modifier.fg.onTranslucent}",
                     "space": "hsl"
                   }
                 }
@@ -1796,7 +1796,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.config.color.modifier.other.onTranslucent}",
+                    "value": "{app.config.color.modifier.fg.onTranslucent}",
                     "space": "hsl"
                   }
                 }
@@ -2070,7 +2070,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.config.color.modifier.other.onTranslucent}",
+                    "value": "{app.config.color.modifier.fg.onTranslucent}",
                     "space": "hsl"
                   }
                 }
