--- a/tokens/application.json
+++ b/tokens/application.json
@@ -633,7 +633,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.modifier.tone.bg}",
+                      "value": "{app.config.color.modifier.bg.tone}",
                       "space": "hsl"
                     }
                   }
@@ -1125,7 +1125,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.modifier.tone.bg}",
+                      "value": "{app.config.color.modifier.bg.tone}",
                       "space": "hsl"
                     }
                   }
