wip: color refactor

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -633,7 +633,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.modifier.bg.tone}",
+                      "value": "{app.config.color.modifier.bg.tone.default}",
                       "space": "hsl"
                     }
                   }
@@ -646,7 +646,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.modifier.bg.other.hover}",
+                      "value": "{app.config.color.modifier.bg.tone.hover}",
                       "space": "hsl"
                     }
                   }
@@ -659,7 +659,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.modifier.bg.other.active}",
+                      "value": "{app.config.color.modifier.bg.tone.active}",
                       "space": "hsl"
                     }
                   }
@@ -1125,7 +1125,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.modifier.bg.tone}",
+                      "value": "{app.config.color.modifier.bg.tone.default}",
                       "space": "hsl"
                     }
                   }
@@ -1138,7 +1138,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.modifier.bg.other.hover}",
+                      "value": "{app.config.color.modifier.bg.tone.hover}",
                       "space": "hsl"
                     }
                   }
@@ -1151,7 +1151,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.modifier.bg.other.active}",
+                      "value": "{app.config.color.modifier.bg.tone.active}",
                       "space": "hsl"
                     }
                   }
@@ -3237,8 +3237,18 @@
               }
             },
             "tone": {
-              "value": "0.1",
-              "type": "other"
+              "default": {
+                "value": "0.08",
+                "type": "other"
+              },
+              "hover": {
+                "value": "0.12",
+                "type": "other"
+              },
+              "active": {
+                "value": "0.18",
+                "type": "other"
+              }
             },
             "other": {
               "hover": {
