wip: color refactor

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1916,16 +1916,7 @@
             "solid": {
               "default": {
                 "type": "color",
-                "value": "{app.color.palette.red.high}",
-                "$extensions": {
-                  "studio.tokens": {
-                    "modify": {
-                      "type": "darken",
-                      "value": "{app.config.color.modifier.border.other.default}",
-                      "space": "hsl"
-                    }
-                  }
-                }
+                "value": "{app.color.palette.red.high}"
               },
               "hover": {
                 "type": "color",
