wip: color refactor

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -12,85 +12,85 @@
         },
         "grey": {
           "default": {
-            "$value": "hsl(220, 4%, 52%)",
+            "$value": "hsl(220, 4%, 44%)",
             "$type": "color"
           },
           "low": {
-            "$value": "hsl(220, 4%, 8%)",
+            "$value": "hsl(220, 4%, 96%)",
             "$type": "color"
           },
           "high": {
-            "$value": "hsl(220, 4%, 96%)",
+            "$value": "hsl(220, 4%, 8%)",
             "$type": "color"
           }
         },
         "blue": {
           "default": {
-            "$value": "hsl(220, 100%, 56%)",
+            "$value": "hsl(220, 100%, 48%)",
             "$type": "color"
           },
           "low": {
-            "$value": "hsl(220, 100%, 8%)",
+            "$value": "hsl(220, 100%, 84%)",
             "$type": "color"
           },
           "high": {
-            "$value": "hsl(220, 100%, 68%)",
+            "$value": "hsl(220, 100%, 24%)",
             "$type": "color"
           }
         },
         "green": {
           "default": {
-            "$value": "hsl(155, 100%, 32%)",
+            "$value": "hsl(155, 100%, 28%)",
             "$type": "color"
           },
           "low": {
-            "$value": "hsl(155, 100%, 6%)",
+            "$value": "hsl(155, 100%, 84%)",
             "$type": "color"
           },
           "high": {
-            "$value": "hsl(155, 100%, 52%)",
+            "$value": "hsl(155, 80%, 18%)",
             "$type": "color"
           }
         },
         "yellow": {
           "default": {
-            "$value": "hsl(40, 100%, 40%)",
+            "$value": "hsl(40, 100%, 36%)",
             "$type": "color"
           },
           "low": {
-            "$value": "hsl(40, 100%, 10%)",
+            "$value": "hsl(40, 100%, 84%)",
             "$type": "color"
           },
           "high": {
-            "$value": "hsl(40, 100%, 64%)",
+            "$value": "hsl(40, 100%, 22%)",
             "$type": "color"
           }
         },
         "red": {
           "default": {
-            "$value": "hsl(15, 100%, 56%)",
+            "$value": "hsl(15, 100%, 52%)",
             "$type": "color"
           },
           "low": {
-            "$value": "hsl(15, 100%, 8%)",
+            "$value": "hsl(15, 100%, 84%)",
             "$type": "color"
           },
           "high": {
-            "$value": "hsl(15, 100%, 64%)",
+            "$value": "hsl(15, 100%, 20%)",
             "$type": "color"
           }
         },
         "neutral": {
           "default": {
-            "$value": "hsl(220, 0%, 52%)",
+            "$value": "hsl(220, 0%, 48%)",
             "$type": "color"
           },
           "low": {
-            "$value": "hsl(220, 0%, 8%)",
+            "$value": "hsl(220, 0%, 96%)",
             "$type": "color"
           },
           "high": {
-            "$value": "hsl(220, 0%, 96%)",
+            "$value": "hsl(220, 0%, 8%)",
             "$type": "color"
           }
         }
@@ -99,29 +99,29 @@
         "bg": {
           "translucent": {
             "default": {
-              "$value": "0.24",
+              "$value": "0.08",
               "$type": "other"
             },
             "hover": {
-              "$value": "0.32",
+              "$value": "0.16",
               "$type": "other"
             },
             "active": {
-              "$value": "0.40",
+              "$value": "0.24",
               "$type": "other"
             }
           },
           "other": {
             "default": {
-              "$value": "0.16",
+              "$value": "0.08",
               "$type": "other"
             },
             "hover": {
-              "$value": "0.24",
+              "$value": "0.16",
               "$type": "other"
             },
             "active": {
-              "$value": "0.32",
+              "$value": "0.24",
               "$type": "other"
             }
           }
@@ -129,29 +129,29 @@
         "border": {
           "translucent": {
             "default": {
-              "$value": "0.24",
+              "$value": "0.28",
               "$type": "other"
             },
             "hover": {
-              "$value": "0.32",
+              "$value": "0.36",
               "$type": "other"
             },
             "active": {
-              "$value": "0.40",
+              "$value": "0.44",
               "$type": "other"
             }
           },
           "other": {
             "default": {
-              "$value": "0.16",
+              "$value": "0.08",
               "$type": "other"
             },
             "hover": {
-              "$value": "0.24",
+              "$value": "0.16",
               "$type": "other"
             },
             "active": {
-              "$value": "0.32",
+              "$value": "0.24",
               "$type": "other"
             }
           }
@@ -202,6 +202,40 @@
             }
           }
         }
+      }
+    },
+    "fontWeight": {
+      "light": {
+        "$value": "Light",
+        "$type": "other"
+      },
+      "regular": {
+        "$value": "Regular",
+        "$type": "other"
+      },
+      "book": {
+        "$value": "Book",
+        "$type": "other"
+      },
+      "medium": {
+        "$value": "Medium",
+        "$type": "other"
+      },
+      "semibold": {
+        "$value": "Semibold",
+        "$type": "other"
+      },
+      "bold": {
+        "$value": "Bold",
+        "$type": "other"
+      },
+      "extrabold": {
+        "$value": "Extrabold",
+        "$type": "other"
+      },
+      "black": {
+        "$value": "Black",
+        "$type": "other"
       }
     }
   }
