wip: color refactor

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2409,35 +2409,35 @@
       "control": {
         "text": {
           "default": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           },
           "alt": {
-            "$value": "{app.config.fontWeight.regular}",
+            "$value": "{config.fontWeight.regular}",
             "$type": "fontWeights"
           },
           "strong": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         },
         "symbol": {
           "default": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           },
           "alt": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           }
         },
         "number": {
           "default": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           },
           "alt": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         }
@@ -2445,31 +2445,31 @@
       "label": {
         "text": {
           "default": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           },
           "strong": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         },
         "number": {
           "default": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           },
           "alt": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         },
         "symbol": {
           "default": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           },
           "alt": {
-            "$value": "{app.config.fontWeight.bold}",
+            "$value": "{config.fontWeight.bold}",
             "$type": "fontWeights"
           }
         }
@@ -2477,77 +2477,77 @@
       "surface": {
         "display": {
           "default": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           },
           "strong": {
-            "$value": "{app.config.fontWeight.semibold}",
+            "$value": "{config.fontWeight.semibold}",
             "$type": "fontWeights"
           }
         },
         "title": {
           "default": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           },
           "strong": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         },
         "callout": {
           "default": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           },
           "strong": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         },
         "subtitle": {
           "default": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           },
           "strong": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         },
         "body": {
           "default": {
-            "$value": "{app.config.fontWeight.regular}",
+            "$value": "{config.fontWeight.regular}",
             "$type": "fontWeights"
           },
           "strong": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         },
         "caption": {
           "default": {
-            "$value": "{app.config.fontWeight.regular}",
+            "$value": "{config.fontWeight.regular}",
             "$type": "fontWeights"
           },
           "strong": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         },
         "footnote": {
           "default": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           },
           "strong": {
-            "$value": "{app.config.fontWeight.medium}",
+            "$value": "{config.fontWeight.medium}",
             "$type": "fontWeights"
           }
         },
         "code": {
           "default": {
-            "$value": "{app.config.fontWeight.book}",
+            "$value": "{config.fontWeight.book}",
             "$type": "fontWeights"
           }
         }
