fix: shadow tokens

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2144,7 +2144,7 @@
               "blur": "0",
               "spread": "0.25rem",
               "color": "{app.color.component.focus.focusRing.default}",
-              "$type": "dropShadow"
+              "type": "dropShadow"
             }
           ],
           "$type": "boxShadow"
@@ -2157,7 +2157,7 @@
               "blur": "0",
               "spread": "0.375rem",
               "color": "{app.color.component.focus.focusRing.default}",
-              "$type": "dropShadow"
+              "type": "dropShadow"
             }
           ],
           "$type": "boxShadow"
@@ -2171,7 +2171,7 @@
             "blur": "6rem",
             "spread": "0",
             "color": "{app.color.surface.shadow.default}",
-            "$type": "dropShadow"
+            "type": "dropShadow"
           },
           "$type": "boxShadow"
         }
@@ -2185,7 +2185,7 @@
               "blur": "4rem",
               "spread": "0",
               "color": "{app.color.component.shadow.default}",
-              "$type": "dropShadow"
+              "type": "dropShadow"
             },
             "$type": "boxShadow"
           },
@@ -2197,7 +2197,7 @@
                 "blur": "2rem",
                 "spread": "0",
                 "color": "{app.color.component.shadow.strong}",
-                "$type": "dropShadow"
+                "type": "dropShadow"
               },
               {
                 "x": "0",
@@ -2205,7 +2205,7 @@
                 "blur": "4rem",
                 "spread": "0",
                 "color": "{app.color.component.shadow.strong}",
-                "$type": "dropShadow"
+                "type": "dropShadow"
               }
             ],
             "$type": "boxShadow"
@@ -2219,7 +2219,7 @@
               "blur": "6rem",
               "spread": "0",
               "color": "{app.color.component.shadow.default}",
-              "$type": "dropShadow"
+              "type": "dropShadow"
             },
             "$type": "boxShadow"
           },
@@ -2231,7 +2231,7 @@
                 "blur": "6rem",
                 "spread": "0",
                 "color": "{app.color.component.shadow.strong}",
-                "$type": "dropShadow"
+                "type": "dropShadow"
               },
               {
                 "x": "0",
@@ -2239,7 +2239,7 @@
                 "blur": "2rem",
                 "spread": "0",
                 "color": "{app.color.component.shadow.strong}",
-                "$type": "dropShadow"
+                "type": "dropShadow"
               }
             ],
             "$type": "boxShadow"
